2007-02-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-group.h:
	Add missing clutter_group_remove_all declaration.

2007-02-14  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-version.h.in:
	* configure.ac:
	* examples/super-oh.c:
	Add CLUTTER_FLAVOUR define.

2007-02-13  Matthew Allum  <mallum@openedhand.com>

	* examples/super-oh.c: (screensaver_setup):
	Fix example to build with new glx api

2007-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-debug.h: Define the CLUTTER_MARK()
	macro even when CLUTTER_ENABLE_DEBUG is not
	defined. (#215)

2007-01-30  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-alpha.c: 
	(sincx1024_func):
	(clutter_sine_func):
	(clutter_sine_inc_func):
	fixed the fixed point math.
	
2007-01-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-alpha.h:
	* clutter/clutter-alpha.c: Add the square waveform
	function clutter_square_func() to the precooked
	alpha functions.

2007-01-23  Matthew Allum  <mallum@openedhand.com>

	* Makefile.am:
	* clutter.pc.in:
	* clutter/Makefile.am:
	* clutter/clutter-backend-glx.c:
	* clutter/clutter-backend-glx.h:
	* clutter/clutter-event.c:
	* clutter/clutter-feature.c:
	* clutter/clutter-group.c:
	* clutter/clutter-main.c:
	* clutter/clutter-main.h:
	* clutter/clutter-private.h:
	* clutter/clutter-stage-glx.c:
	* clutter/clutter-stage-glx.h:
	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/clutter-util.c:
	* clutter/clutter-util.h:
	* clutter/pango/pangoclutter-render.c:
	* configure.ac:
	* examples/Makefile.am:
	Initial work in supporting different GL backends (ie. GLX/EGL/DirectFB etc). 
	Currently just GLX supported and now mostly self contained. 

	* TODO:
	Add a note about caching glenables

2007-01-23  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.c:
	(_clutter_double_to_fixed):
	(_clutter_double_to_int):